style.css
/* ... */
.rem1-7 {
	min-height: 1.7rem;
	line-height: 1.7rem;
}
.rem1-7 .item {
	height: 1.7rem;
	line-height: 1.7rem;
}
.rem1-7 .textItem {
	min-height: 1.7rem;
	line-height: 1.7rem;
}
.rem1-7 .avatar {
	width: 1.7rem;
}
.rem1-7 .iconBg {
	width: 1rem;
	/*margin-right: 0.2rem;*/
}

.rem1-5 {
	min-height: 1.5rem;
	line-height: 1.5rem;
}
.rem1-5 .item {
	height: 1.5rem;
	line-height: 1.5rem;
}
.rem1-5 .textItem {
	min-height: 1.5rem;
	line-height: 1.5rem;
}
.rem1-5 .avatar {
	width: 1.5rem;
}
.rem1-5 .iconBg {
	width: 1rem;
	/*margin-right: 0.2rem;*/
}

.rem2-3 {
	min-height: 2.3rem;
	line-height: 2.3rem;
}
.rem2-3 .item {
	height: 2.3rem;
	line-height: 2.3rem;
}
.rem2-3 .textItem {
	min-height: 2.3rem;
	line-height: 2.3rem;
}
.rem2-3 .avatar {
	width: 2.3rem;
}
.rem2-3 .iconBg {
	width: 1.5rem;
}

/**********************
 ** Button Container **
 **********************/
button {
	line-height: normal !important;
	font-size: 0.8em;
	cursor: pointer;
	font-family: roboto, sans-serif;

	border: 1px solid black;
	border-radius: 0px;
	padding: 0 0.5rem;

	background: linear-gradient(#EEE, #CCC);
}
.buttonContainer {
	padding: 1px;
	display: inline-block;
}
.buttonContainer button {
	margin: 0;
	height: 100%;
	overflow-y: hidden;
	/*
	padding: 0 0.5rem;
	background-color: #EEE;
	border: 2px solid gray;
	border-style: outset;
	border-radius: 0px;*/
/*	
	padding: 0 0.5rem;
	background-color: #DDD;
	border: 2px solid gray;
	border-color: white #333 #333 white;
	border-radius: 0px;*/
}

.buttonContainer > a {
	width: 100%;
	height: 100%;
	display: inline-block;
}
button:hover {
	border-color: #59E;
}

button[aria-selected="true"] {
	background: linear-gradient(#888, #AAA);
}

button:active {
	border-style: inset;
	background: linear-gradient(#DDD, #EEE);
}

/**********/

html:not(.f-loggedIn) .loggedIn,
html.f-loggedIn .loggedOut {
	display: none;
}

/*************
 ** Top Bar **
 *************/

html.f-error .loadBG {
	background-color: #800;
}

.pathSeparator {
	padding: 0 0.2rem;
}

.pathBar {
	font-weight: bold;
	padding: 0 0.2rem;
	/*box-shadow: inset 0 -2px 3px rgba(0,0,0,0.3);*/
}

#\$chatContainer {
	overflow-y: hidden;
}

.bottomBorder {
	border-bottom: 1px solid gray;
}

.border-list > *:not(:last-child),
.border-list-2 > * {
	border-bottom: 1px solid gray;
}

/**********
 ** Tabs **
 **********/
table.tabs {
	width: 100%;
	height: 1px; /* don't worry */
	table-layout: fixed;
}
table.tabs tbody, table.tabs tr, table.tabs td {
	height: 100%;
}
table.tabs td {
	margin: 0;
	padding: 0;
	text-align: center;
	border-right: 1px solid gray;
}

table.tabs td button {
	width: 100%;
	height: 2rem;
	border: none;
	vertical-align: top;
	font-size: 1em;
	padding: 0;
}

table.tabs td:last-child {
	border-right: none;
}

button[aria-selected="true"] {
	background-color: gray;
}

/**********/

.myUserBar {
	background-color: #EEE;
	padding: 0 0.2rem;
}

html.f-sidebarUploaded .sidebarUploadingFile,
html:not(.f-sidebarFile) .sidebarUploadingFile,
html:not(.f-sidebarUploaded) .sidebarUploadedFile {
	display: none;
}

/****************
 ** Title Pane **
 ****************/
.titlePane {
	/*border-bottom: 2px solid black;*/
	background-color: #222;
	color: white;
	box-shadow: 0 2px 3px rgba(0,0,0,0.3);
	z-index: 10;
	padding: 1px;
	/*-webkit-transition: background-color 0.1s ease;
	transition: background-color 0.1s ease;*/
}


.titlePane .entity-title {
	font-weight: normal;
	color: #DEF;
}

.status-idle > .avatar {
	filter: grayscale(1);
}

html.f-loading .loadBG {
	background-color: #225450;
}

.loadBG {
	-webkit-transition: background-color 0.1s ease;
	transition: background-color 0.1s ease;
}

.titlePane .iconBg {
	width: 2rem;
}

.pageTitle {
	font-weight: normal;
}

.titlePane .pageTitle .entity-title {
	color: white;
	padding-right: 0.5rem;
}

html:not(.f-canEdit) .canEdit {
	display: none;
}

.errorMode .titlePane {
	color: maroon;
	font-family: monospace;
}

.titlePane > :first-child {
	min-width: 0.3rem;
	display: inline-block;
}

/*******************************
 ** content+sidebar container **
 *******************************/
horizontal-split {
	overflow-x: hidden;
}

.errorPage {
	padding: 0.2rem;
	font-family: monospace;
}

main {
	width:100%;
	/*overflow-y: hidden; /* mmm */
}

sidebar-container {
	border-left: 1em solid #222;
	background-color: white;
	width: 30vw;
	min-width: 10vw;
	z-index: 20;
	box-shadow: -1px 0px 3px rgba(0,0,0,0.3);
}

html:not(.f-sidebar) sidebar-container {
	display: none;
}

html.f-sidebar main {
	overflow:auto;
}

html:not(.f-sidebar) main {
	width: 100% !important;
	overflow:auto;
}

/**********
 ** main **
 **********/
main-scrollable {
	overflow-y: auto;
	flex-basis: auto;
	
	/*padding: 0.5rem;*/
	/*overflow-y: scroll;*/
	
	/*min-height: 300px;
	height: 300px;*/
}

/*******************
 ** Category Pane **
 *******************/
.linkBar {
	/*font-weight: bold;*/
	display: block;
	background-color: #EEE;
	padding: 0.2rem;
}

.linkBar:focus {
	background-color: white;
}

/*********
 ** Nav **
 *********/
.nav {
	background-color: #333;
	color: white;
}

.nav > span {
	color: white;
}

/**************
 ** Userlist **
 **************/
.chatPane .userlist {
	box-shadow: 0 2px 3px rgba(0,0,0,0.3);
	z-index: 4;
}

.userlist {
	background-color: #EEE;
}

/*******************
 ** Chat Messages **
 *******************/
message-block {
	font-size: 1em;
	padding: 0.4rem 0.5rem;
	white-space: pre-wrap;
	/*border-left-width: 0.5em;
	border-left-style: solid;
	border-left-color: rgb(255,153,153);*/
	clear: both;
	overflow: auto;
	display: block;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
	min-height: 3.5rem;
}

message-block > time {
	float: right;
	font-weight: normal;
	padding-right: .5em;
	color: #666;
}
message-block > img.avatar {
	display: inline-block;
	width: 3.5rem;
	height: 3.5rem;
	border: 1px solid #777;
	margin-right: 0.5rem;
/*	float: left;*/
}
message-block > .username {
	margin-left: 4rem;
	display: block;
}
/* ... */

